# sqlalchemy-filters

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: tests.yml
docker-resources/: Dockerfile
sqlalchemy_filters/: filters.py  models.py  pagination.py  sorting.py
test/: conftest.py  models.py
test/interface/: test_filters.py  test_models.py  test_pagination.py  test_sorting.py
