[tool.poetry]
name = "sqlalchemy-filters"
version = "1.1.2"
description = ""
authors = ["Rob de Rijk <rob@connectholland.nl>"]
repository = "https://github.com/ConnectHolland/sqlalchemy-filters"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = ">=1.0.16, < 1.4"
six = "^1.16.0"
mysql-connector-python-rf = { version = "2.2.2", optional = true }
psycopg2-binary = { version = "2.9.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
sqlalchemy-utils = "^0.37.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
mysql = ["mysql-connector-python-rf"]
postgresql = ["psycopg2-binary"]
